--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ edition = "2018"
 name = "bme280"
 
 [dependencies]
-embedded-hal = "=1.0.0-alpha.10"
-embedded-hal-async = { version = "0.2.0-alpha.1", optional = true }
+embedded-hal = "1.0.0"
+embedded-hal-async = { version = "1.0.0", optional = true }
 
 serde = { version = "1.0", optional = true, features = ["derive"] }
 defmt = { version = "0.3.2", optional = true }
